进入老年代的次数